frontend/test/should_fail/ret_004.grg
rule r : (Node, Node) {
	x: Node;
	y: Node;

	replace {
		return(x, a);
	}
}

